# pyexbase

./: .dir-locals.el  .gitignore  CMakeLists.txt  flake.nix  setup.py  shell.nix
nix/: default.nix
src/: CMakeLists.txt  exbase_bindings.cpp  lang.hpp  str2word_id.hpp  word_id_hash.hpp
